Added random_word app to dojo_survey. Modified urls in survey_app to reflect routes for multiple apps

--- a/python_stack/_django/django_intro/dojo_survey/survey_app/templates/survey/index.html
+++ b/python_stack/_django/django_intro/dojo_survey/survey_app/templates/survey/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container-fluid">
-        <form action="/process" method="POST">
+        <form action="/survey/process/" method="POST">
             {% csrf_token %}
             <div class="form-group">
                 <label for="name">Say Your Name:</label>
