--- a/python_stack/_django/full_stack/tv_shows/tv_shows_app/templates/show_index.html
+++ b/python_stack/_django/full_stack/tv_shows/tv_shows_app/templates/show_index.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
-    <div id="content">
+    <div class="header">
         <h1>All Shows</h1>
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li> 
+            {% endfor %}
+        </ul>
+            {% endif %}
+    </div>
+    <div id="content">
         <table>
             <th>ID</th>
             <th>Title</th>
@@ -29,6 +38,6 @@
             {% endfor %}
         </table>
         <a href="shows/new">Add A New Show</a>
-    </div>   
+    </div>
 </body>
 </html>
