--- a/python_stack/_django/full_stack/tv_shows/tv_shows_app/templates/base.html
+++ b/python_stack/_django/full_stack/tv_shows/tv_shows_app/templates/base.html
@@ -8,7 +8,7 @@
 <body>
     <div id="menu">
         {% block menu %}
-        <a href="home">Go Back</a>
+        <a href="/shows">Go Back</a>
         {% endblock %}
     </div>
 
