--- a/python_stack/_django/full_stack/tv_shows/tv_shows_app/templates/show_detail.html
+++ b/python_stack/_django/full_stack/tv_shows/tv_shows_app/templates/show_detail.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
+    {% extends "base.html" %}
+    {% block content %}
     <div id="content">
         <h1>TV Show: {{ this_show.id }}</h1>
         <h2>{{ this_show.title }}</h2>
@@ -17,5 +19,6 @@
         <p>Last Updated: {{ this_show.updated_at }}</p>
         <a href="{% url 'edit' this_show.id %}">Edit</a> | <a href="{% url 'delete' this_show.id %}">Delete</a>
     </div>
+    {% endblock %}
     </body>
 </html>
