Added deletion functionality.

--- a/python_stack/_django/full_stack/courses_proj/courses_app/templates/index.html
+++ b/python_stack/_django/full_stack/courses_proj/courses_app/templates/index.html
@@ -42,7 +42,7 @@
                     <td>{{course.name}}</td>
                     <td>{{course.description.description}}</td>
                     <td>{{course.created_at}}</td>
-                    <td><a href="destroy/{{course.id}}">Delete</a></td>
+                    <td><a href="destroy/{{course.id}}">Remove</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
