--- a/python_stack/_django/full_stack/courses_proj/courses_app/templates/index.html
+++ b/python_stack/_django/full_stack/courses_proj/courses_app/templates/index.html
@@ -10,6 +10,15 @@
 <body>
     <div class="wrapper container">
         <h3 class="display-4">Add a New Course</h3>
+
+        {% if messages %}
+            <ul class="messages">    
+                {% for message in messages %}    
+                    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>    
+                {% endfor %}
+            </ul>
+        {% endif %}
+
         <div class="container">
             <form action="/create" method="POST" mb-4>
                 {% csrf_token %}
@@ -42,7 +51,7 @@
                     <td>{{course.name}}</td>
                     <td>{{course.description.description}}</td>
                     <td>{{course.created_at}}</td>
-                    <td><a href="destroy/{{course.id}}">Remove</a></td>
+                    <td><a href="destroy/{{course.id}}">Remove</a> | <a href="comments/{{course.id}}">Comments</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
