--- a/python_stack/_django/full_stack/login_and_reg/log_reg_app/templates/index.html
+++ b/python_stack/_django/full_stack/login_and_reg/log_reg_app/templates/index.html
@@ -9,30 +9,42 @@
 </head>
 <body>
     <div class="wrapper container">
+        {% if messages %}
+            <ul class="messages">    
+                {% for message in messages %}    
+                    <li>{{ message }}</li>    
+                {% endfor %}
+            </ul>
+        {% endif %}
+
         <div class="row">
             <div class="col p-4 bg-secondary m-1">
                 <h2 class="display-4">Register</h2>
-                <form action="" method="POST" name="Registration">
+                <form action="/register" method="POST" name="Registration">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="fname">First Name:</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="fname">
                     </div>
                     <div class="form-group">
                         <label for="lname">Last Name:</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="lname">
+                    </div>
+                    <div class="form-group">
+                        <label for="bday">Birthday:</label>
+                        <input type="date" class="form-control" name="bday">
                     </div>
                     <div class="form-group">
                         <label for="email">Email Address:</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="email">
                     </div>
                     <div class="form-group">
                         <label for="password">Password:</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" name="password">
                     </div>
                     <div class="form-group">
                         <label for="conf_password">Confirm Password:</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" name="conf_password">
                     </div>
                     <button type="submit" class="btn btn-primary">Register</button>
                 </form>
