--- a/python_stack/_django/full_stack/login_and_reg/log_reg_app/templates/success.html
+++ b/python_stack/_django/full_stack/login_and_reg/log_reg_app/templates/success.html
@@ -22,6 +22,13 @@
                         role="button">Log out</a></span>
             </div>
         </nav>
+        {% if messages %}
+            <ul class="messages">    
+                {% for message in messages %}    
+                    <li>{{ message }}</li>    
+                {% endfor %}
+            </ul>
+        {% endif %}
         <div class="container">
             <div class="jumbotron">
                 <h1 class="display-4">Success!</h1>
