--- a/python_stack/_django/full_stack/login_and_reg/log_reg_app/templates/index.html
+++ b/python_stack/_django/full_stack/login_and_reg/log_reg_app/templates/index.html
@@ -18,7 +18,7 @@
         {% endif %}
 
         <div class="row">
-            <div class="col p-4 bg-secondary m-1">
+            <div class="col p-4 bg-info m-1">
                 <h2 class="display-4">Register</h2>
                 <form action="/register" method="POST" name="Registration">
                     {% csrf_token %}
@@ -50,17 +50,17 @@
                 </form>
             </div>
 
-            <div class="col p-4 bg-secondary m-1">
+            <div class="col p-4 bg-info m-1">
                 <h2 class="display-4">Login</h2>
-                <form action="" method="POST">
+                <form action="/login" method="POST">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="email">Email Address:</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="email">
                     </div>
                     <div class="form-group">
                         <label for="password">Password:</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" name="password">
                     </div>
                     <button type="submit" class="btn btn-primary">Login</button>
                 </form>
