--- a/python_stack/_django/full_stack/the_wall/wall_app/templates/wall/index.html
+++ b/python_stack/_django/full_stack/the_wall/wall_app/templates/wall/index.html
@@ -37,10 +37,18 @@
                 <form action="post_message" method="POST">
                     {% csrf_token %}
                     <div class="form-group">
-                        <textarea class="form-control rounded-0" rows="3" name="message"></textarea>
+                        <textarea class="form-control rounded-0" rows="3" name="content"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Post</button>
                 </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col p-4 m-1">
+                {% for message in all_messages reversed %}
+                <h4 class="d-inline mr-5">{{message.user.first_name}} <small>{{message.created_at}}</small></h4>
+                <p>{{ message.content }}</p>
+                {% endfor %}
             </div>
         </div>
     </div>
