--- a/python_stack/_django/full_stack/the_wall/wall_app/templates/wall/index.html
+++ b/python_stack/_django/full_stack/the_wall/wall_app/templates/wall/index.html
@@ -17,7 +17,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
-                
                 </ul>
                 <span class="navbar-text">Welcome back, {{ request.session.username }} <a class="btn btn-sm btn-light text-dark" href="#"
                     role="button">Log out</a></span>
@@ -39,7 +38,7 @@
                     <div class="form-group">
                         <textarea class="form-control rounded-0" rows="3" name="content"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Post</button>
+                    <button type="submit" class="btn btn-primary">Post a message</button>
                 </form>
             </div>
         </div>
@@ -48,6 +47,20 @@
                 {% for message in all_messages reversed %}
                 <h4 class="d-inline mr-5">{{message.user.first_name}} <small>{{message.created_at}}</small></h4>
                 <p>{{ message.content }}</p>
+                    {% for comment in message.has_comments.all reversed %}
+                    <div class="col p-4 m-1">
+                        <p class="text-secondary">{{ comment.user.first_name }} <small>{{ comment.user.created_at }}</small></p>
+                        <p class="text-secondary"><small>{{ comment.content }}</small></p>
+                    </div>
+                    {% endfor %}
+                    <form action="post_comment" method="POST">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <textarea class="form-control rounded-0" rows=2" name="content"></textarea>
+                            <input type="hidden" name="message_id" value="{{ message.id }}">
+                        </div>
+                        <button type="submit" class="btn btn-info mb-5">Post a comment</button>
+                    </form>
                 {% endfor %}
             </div>
         </div>
