--- a/python_stack/_django/full_stack/favorite_books/login_app/templates/login/index.html
+++ b/python_stack/_django/full_stack/favorite_books/login_app/templates/login/index.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col p-4 m-1">
                 <h2 class="display-4">Register</h2>
-                <form action="register" method="POST" name="Registration">
+                <form action="register" method="POST">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="fname">First Name:</label>
