Added user detail page.

--- a/python_stack/_django/full_stack/favorite_books/book_app/templates/book/book_detail.html
+++ b/python_stack/_django/full_stack/favorite_books/book_app/templates/book/book_detail.html
@@ -19,6 +19,7 @@
                 <ul class="navbar-nav mr-auto">
                 </ul>
                 <span class="navbar-text"><a class="navbar" href="/books">Home</a></span>
+                <span class="navbar-text"><a class="navbar" href="/books/profile/{{logged_user.id}}">Profile</a></span>
                 <span class="navbar-text"><a class="btn btn-sm btn-light text-dark" href="/logout" role="button">Log out</a></span>
             </div>
         </nav>
