--- a/python_stack/_django/full_stack/pagination/leads/templates/query_results.html
+++ b/python_stack/_django/full_stack/pagination/leads/templates/query_results.html
@@ -1,21 +1,39 @@
-<div class="container" id="query_results">
-    <div class="col p-4 m-1">
-        <p class="row justify-content-end">1/2/3/4/5/></p>
-        <table class="table">
-            <th scope="col">Lead ID</th>
-            <th scope="col">First Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Email</th>
-            <th scope="col">Date Created</th>
-            {% for lead in all_leads %}
-            <tr>
-                <td>{{ lead.id }}</td>
-                <td>{{ lead.first_name }}</td>
-                <td>{{ lead.last_name }}</td>
-                <td>{{ lead.email }}</td>
-                <td>{{ lead.created_at }}</td>
-            </tr>
+<div class="col p-4 m-1">
+
+    <div class="pagination row justify-content-end">
+        <span class="step-links">
+            {% for page in page_obj.num_pages %}
             {% endfor %}
-        </table>
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo;</a>
+                <a href="?page={{ page_obj.previous_page_number }}">prev</a>
+            {% endif %}
+    
+            <span class="current">
+                Page {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}
+            </span>
+    
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">&raquo;</a>
+            {% endif %}
+        </span>
     </div>
+    
+    <table class="table">
+        <th scope="col">Lead ID</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Date Created</th>
+        {% for lead in page_obj %}
+        <tr>
+            <td>{{ lead.id }}</td>
+            <td>{{ lead.first_name }}</td>
+            <td>{{ lead.last_name }}</td>
+            <td>{{ lead.email }}</td>
+            <td>{{ lead.created_at }}</td>
+        </tr>
+        {% endfor %}
+    </table>
 </div>
