ajax pagination complete.

--- a/python_stack/_django/full_stack/pagination/leads/templates/query_results.html
+++ b/python_stack/_django/full_stack/pagination/leads/templates/query_results.html
@@ -1,6 +1,6 @@
 <div class="col p-4 m-1">
 
-    <div class="pagination row justify-content-end">
+    <div class="pagination row justify-content-end" id="pages">
         <span class="step-links">
             {% for page in page_obj.num_pages %}
             {% endfor %}
