--- a/python_stack/_django/full_stack/pagination/leads/templates/index.html
+++ b/python_stack/_django/full_stack/pagination/leads/templates/index.html
@@ -29,10 +29,10 @@
                 </div>
             </form>
         </div>
-        <div class="container" id="results"
-            <div class="col p-4 m-1">
 
-                <div class="pagination row justify-content-end" id="query">
+        <div class="container">
+            <div class="col p-4 m-1">
+                <div class="pagination row justify-content-end" id="pages">
                     <span class="step-links">
                         {% if page_obj.has_previous %}
                             <a href="?page=1">&laquo;</a>
@@ -72,13 +72,13 @@
     </div>
 
    <script>
-        $('#query').on('click', 'a', function(e){
+        $('#pages').on('click', 'a', function(e){
             e.preventDefault()
             $.ajax({
                 url: $(this).attr('href'),
                 method: 'get',
                 success: function(serverResponse){
-                    $('#query').html(serverResponse)
+                    $('#wrapper').html(serverResponse)
                 }
             })
         });
