Moved backend validation messages on index.html

--- a/python_stack/_django/full_stack/login_and_reg/log_reg_app/templates/index.html
+++ b/python_stack/_django/full_stack/login_and_reg/log_reg_app/templates/index.html
@@ -10,6 +10,14 @@
 <body>
     <div class="wrapper container">
 
+    {% if messages %} 
+    <ul class="messages">    
+        {% for message in messages %}    
+            <li class="{{ messages.tags }}">{{ message }}</li>    
+        {% endfor %}
+    </ul>
+    {% endif %}
+
         <div class="row">
             <div class="col p-4 bg-secondary m-1">
                 <h2 class="display-4">Register</h2>
