--- a/python_stack/_django/full_stack/pagination/leads/templates/index.html
+++ b/python_stack/_django/full_stack/pagination/leads/templates/index.html
@@ -13,19 +13,20 @@
             <h2 class="display-5">Your Leads</h2>
         </div>
         <br><hr><br>
-        <div class="container" id="search_form">
-            <form class="form_group" action="">
+        <div class="container" id="lead_search">
+            <form class="form_group" action="/leadsearch" method="GET">
+                {% csrf_token %}
                 <h5>Apply Filters:</h5>
                 <div class="form-group">
-                    <label for="fname">First Name:</label>
-                    <input type="text" name="fname">
+                    <label for="first">First Name:</label>
+                    <input type="text" name="first" id="fname">
                     <label for="lname">Last Name:</label>
-                    <input type="text" name="lname">
+                    <input type="text" name="lname" id="lname">
                     <label for="date_min">From:</label>
-                    <input type="date" name="date_min">
+                    <input type="date" name="date_min" id="date_min">
                     <label for="date_max">To:</label>
-                    <input type="date" name="date_max">
-                    <input type="hidden" value="">
+                    <input type="date" name="date_max" id="date_max">
+                    <button type="submit" value="Search">Submit</button>
                 </div>
             </form>
         </div>
@@ -72,6 +73,7 @@
     </div>
 
    <script>
+       // ajax pagination
         $('#pages').on('click', 'a', function(e){
             e.preventDefault()
             $.ajax({
@@ -82,6 +84,21 @@
                 }
             })
         });
+    
+        // ajax search
+        $('#fname').keyup(function(){
+            var data = $('#lead_search').serialize() //capture form data
+            $.ajax({
+                method: 'POST',
+                url: '/leadsearch',
+                data: data,
+            })
+            .done(function(res){
+                $('#wrapper').html(res)
+            })
+
+        })
+
 
    </script>
 </body>
