--- a/python_stack/_django/full_stack/pagination/leads/templates/snippets/query_results.html
+++ b/python_stack/_django/full_stack/pagination/leads/templates/snippets/query_results.html
@@ -1,5 +1,13 @@
 <div class="col p-4 m-1">
 
+    {% if messages %}
+    <ul class="messages">    
+        {% for message in messages %}    
+            <li class="{{ messages.tags }}">{{ message }}</li>    
+        {% endfor %}
+    </ul>
+    {% endif %}
+
     <div class="pagination row justify-content-end" id="pages">
         <span class="step-links">
             {% for page in page_obj.num_pages %}
